[package]
name = "expense_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.26"
fuzzy-matcher = "0.3"
log = "0.4"
ratatui = "0.20"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
fern = "0.6"
dirs = "5.0"
